用户新增购物历史评分

--- a/html/groud.html
+++ b/html/groud.html
@@ -100,7 +100,7 @@
 
 <body>
     <div id="app">
-        <van-tabs v-model="headTabActive" animated>
+        <van-tabs v-model="headTabActive" animated sticky>
             <van-tab title="广场">
                 <div class="search">
                     <van-search v-model="searchValue" placeholder="请输入搜索关键词" shape="round" />
